...
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username:" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:ems="10"
            android:hint="username" />

        <TextView
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Password:" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login" />


        <Button
            android:id="@+id/linkToRegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
